[package]
name = "euler-168"
version = "0.1.0"
authors = ["trivernis <trivernis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.12.0"
num-bigint = "0.2.6"
num-traits = "0.2.11"
num-integer = "0.1.42"